Fix comment vote arrows overlapping

--- a/src/scss/modules/_utility-icons.scss
+++ b/src/scss/modules/_utility-icons.scss
@@ -21,6 +21,9 @@ $size: 30px;
 }
 
 // vote arrows
+.comment .midcol {
+    width: auto;
+}
 .arrow{
 	display: block;
 	height: 20px;
